Added tournament register page

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 	    <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
 	        <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
 	            <li class="nav-item">
-	                <a class="nav-link" href="#home">Home</a>
+	                <a class="nav-link" href="#home">HOME</a>
 	            </li>
 	            <li class="nav-item">
-	                <a class="nav-link" href="#tournaments">Tournaments</a>
+	                <a class="nav-link" href="#tournaments">TOURNAMENTS</a>
 	            </li>
 	            <li class="nav-item">
-	                <a class="nav-link" href="#about">About Us</a>
+	                <a class="nav-link" href="#about">ABOUT US</a>
 	            </li>
 	            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	        	<li class="nav-item">
-                    <a class="nav-link" href="{{ url('/login') }}"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+                    <a class="nav-link" href="{{ url('/login') }}"><i class="fa fa-sign-in" aria-hidden="true"></i> LOGIN</a>
                 </li>
 	        </ul>
 	    </div>
@@ -84,7 +84,7 @@
 
 	<section id="tournaments"  style="background-image: url('Art/Tournaments.jpg');width: 100%; background-repeat: no-repeat;
 	background-size: cover; min-height: 100vh; padding-top: 5vh;">
-		<header style="text-align: center; margin-top: 7vh;">  <h2 class="display-3" style="color:white"> <strong> Tournaments </strong></h2></header>
+		<header style="text-align: center;">  <h2 class="display-3" style="color:white"> <strong> Tournaments </strong></h2></header>
 		<div class="container">
 	    <div class="card-deck" style="margin-top: 3vh;">
 	    	<div class="card mb-4"><a href="pmis-2020.html">
@@ -131,7 +131,12 @@
 	            </div>
 	        </div>
 	    </div>
-	</div>
+	</div>	
+	<p style="text-align: center; margin-top: 25px;">
+		<a itemprop="url" href="tournament-register.html" target="_self" class="tourn-btn">
+			<span class="tourn-btn-text">HOST A TOURNAMENT</span>
+		</a>
+	</p>
 	</section>
 
 	<footer class="footer" id="about">
