--- a/pmis-2020.html
+++ b/pmis-2020.html
@@ -43,7 +43,7 @@
 		</div>		
 	</nav>-->
 	<div class="bg-poster">
-		<nav class="navbar navbar-dark navbar-expand-sm bg-dark bottomleft">
+		<nav class="navbar navbar-dark navbar-expand-sm bg-poster bottomleft">
 			<img src="Images/Icons/PMIS-Logo.png" width="50px" width="50px">
 		    <a href="/" class="navbar-brand d-flex w-50 mr-auto" style="font-size: 80px;"> PMIS</a>
 		    <button type="button" class="navbar-toggler collapse" data-toggle="collapse" data-target="#collapsingNavbar3" aria-expanded="false">
